--- a/Interdisciplinary/Interdisciplinary/Views/Shared/_Layout.cshtml
+++ b/Interdisciplinary/Interdisciplinary/Views/Shared/_Layout.cshtml
@@ -8,6 +8,22 @@
 </head>
 <body>
     <header>
+        <nav>
+            <ul>
+                <li>
+                    <a asp-controller="Home" asp-action="Index">Hjem</a>
+                </li>
+                <li>
+                    <a asp-controller="User" asp-action="Index">Producenter</a>
+                </li>
+                <li>
+                    <a asp-controller="Category" asp-action="Index">Kategorier</a>
+                </li>
+                <li>
+                    <a asp-controller="Food" asp-action="Index">Fødevarer</a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <div class="container">
         <main role="main" class="pb-3">
