--- a/Interdisciplinary/Interdisciplinary/wwwroot/css/imports/_content.scss
+++ b/Interdisciplinary/Interdisciplinary/wwwroot/css/imports/_content.scss
@@ -1,8 +1,9 @@
 body {
-    background-color: red;
-    .grid-container {
-        padding: 0;
-        max-width: 100%;
-        margin: 0;
+    background-color: $colorBrown;
+    padding: 0;
+    max-width: 100%;
+    margin: 0;
+    a {
+        color: $colorWhite;
     }
 }
