--- a/Interdisciplinary/Interdisciplinary/wwwroot/css/styles.css
+++ b/Interdisciplinary/Interdisciplinary/wwwroot/css/styles.css
@@ -1,1 +1,1 @@
-body{background-color:#f00}body .grid-container{padding:0;max-width:100%;margin:0}header nav{background:#a6a09c}footer{background:#f2f2f2}
+body{background-color:#73685f;padding:0;max-width:100%;margin:0}body a{color:#f2f2f2}header nav{background:#262626}header nav ul{display:flex;justify-content:center;margin:0;padding:0}header nav ul li{list-style:none}header nav ul li a{color:#f2f2f2}footer{background:#f2f2f2}
