--- a/Interdisciplinary/Interdisciplinary/wwwroot/css/imports/_footer.scss
+++ b/Interdisciplinary/Interdisciplinary/wwwroot/css/imports/_footer.scss
@@ -1,3 +1,88 @@
 footer {
-    background: $colorWhite;
+    background-color: #315f4b;
+    display: grid;
+    grid-template-columns: repeat(4, auto);
+    justify-items: center;
+    padding: 40px 0;
+
+    .footerAddress {
+        h3 {
+            /*@include fontStyle(25px, #7e9764, bold, 29px);*/
+            font-size: 25px; 
+            color: #7e9764;
+            font-weight: bold; 
+            line-height: 29px;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+
+        p {
+            /*@include fontStyle(16px, white, 0, 23px);*/
+            font-size: 16px; 
+            color: white; 
+            line-height: 23px;
+            margin: 10px 0;
+        }
+
+        .flex {
+            display: flex;
+            align-items: center;
+
+            a {
+                text-decoration: none;
+                color: white;
+                padding-left: 5px;
+                transition: 0.2s;
+
+                &:hover {
+                    color: #7e9764;
+                }
+            }
+        }
+    }
+
+    .footerMenu {
+        h3 {
+            /*@include fontStyle(25px, #7e9764, bold, 29px);*/
+            font-size: 25px; 
+            color: #7e9764;
+            font-weight: bold; 
+            line-height: 29px; 
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+
+            li {
+                margin-bottom: 15px;
+
+                a {
+                    text-decoration: none;
+                    color: white;
+                    transition: 0.2s;
+
+                    &:hover {
+                        color: #7e9764;
+                    }
+                }
+            }
+        }
+    }
+
+    .footerLogo {
+        img {
+            width: 60px;
+            height: auto;
+        }
+    }
+
+    .footerPrice {
+        img {
+            width: 150px;
+            height: auto;
+        }
+    }
 }
