--- a/Interdisciplinary/Interdisciplinary/wwwroot/css/imports/_header.scss
+++ b/Interdisciplinary/Interdisciplinary/wwwroot/css/imports/_header.scss
@@ -20,14 +20,17 @@ header {
         justify-items: center;
         align-content: space-evenly;
         background-color: #315f4b;
-        height: 80px;
+        height: 80px;   
 
         ul {
             list-style-type: none;
             display: grid;
-            grid-template-columns: repeat(4, 120px);
+            grid-template-columns: repeat(4, 150px);
             justify-content: center;
             justify-items: center;
+            grid-column-gap: 20px;
+            margin: 0px 0px;
+            padding: 0px 0px;
 
             li {
                 a {
