--- a/Interdisciplinary/Interdisciplinary/Views/Home/Index.cshtml
+++ b/Interdisciplinary/Interdisciplinary/Views/Home/Index.cshtml
@@ -2,7 +2,24 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="page">
+    <section class="header" style="background-image: url('~/images/headerImg.png')">
+        <div class="info">
+            <div>
+                <img src="~/images/shippingIcon.png" />
+                <h5>Free Shipping</h5>
+                <p>Lorem ipsum....</p>
+            </div>
+            <div>
+                <img src="~/images/deliveryIcon.png" />
+                <h5>Fast delivery</h5>
+                <p>Lorem ipsum....</p>
+            </div>
+            <div>
+                <img src="~/images/creditcardIcon.png" />
+                <h5>Secure payment</h5>
+                <p>Lorem ipsum....</p>
+            </div>
+        </div>
+    </section>
 </div>
