Background på Header

--- a/Interdisciplinary/Interdisciplinary/Views/Home/Index.cshtml
+++ b/Interdisciplinary/Interdisciplinary/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="page">
-    <section class="header" style="background-image: url('~/images/headerImg.png')">
+    <section class="header">
         <div class="info">
             <div>
                 <img src="~/images/shippingIcon.png" />
