--- a/Interdisciplinary/Interdisciplinary/Views/Home/Index.cshtml
+++ b/Interdisciplinary/Interdisciplinary/Views/Home/Index.cshtml
@@ -22,4 +22,9 @@
             </div>
         </div>
     </section>
+
+    <section class="bottom">
+        <h2>Organic fresh fruit & vegetables for your health</h2>
+        
+    </section>
 </div>
