Mere til forsiden + baggrundsfarve

--- a/Interdisciplinary/Interdisciplinary/Views/Home/Index.cshtml
+++ b/Interdisciplinary/Interdisciplinary/Views/Home/Index.cshtml
@@ -23,6 +23,25 @@
         </div>
     </section>
 
+    <section class="categories">
+        <div class="vegetables">
+            <h4>Vegetable</h4>
+            <h2>Green Food</h2>
+            <p>Lorem Ipsum</p>
+            <a href="#">Vegetables</a>
+            <img src="~/images/salat.png" />
+        </div>
+
+        <div class="fruits">
+            <h4>Fruit</h4>
+            <h2>Healthy Food</h2>
+            <p>Lorem Ipsum</p>
+            <a href="#">Fruits</a>
+            <img src="~/images/jordbær.png" />
+        </div>
+
+    </section>
+
     <section class="bottom">
         <h2>Organic fresh fruit & vegetables for your health</h2>
         
