--- a/Interdisciplinary/Interdisciplinary/wwwroot/css/imports/_variables.scss
+++ b/Interdisciplinary/Interdisciplinary/wwwroot/css/imports/_variables.scss
@@ -4,6 +4,10 @@ $colorGrey: #A6A09C;
 $colorBrown: #73685F;
 $colorDarkBrown: #59514A;
 $colorBlack: #262626;
+$colorGreen: #7E9764;
+$colorGrey: #ededed;
+$colorLightGreen: #d6ebcb ;
+$colorYellow: #f5edaf;
 
 //Fonts
 $font-fam: 'Helvetica', sans-serif;
