Endnu mere forside styling

--- a/Interdisciplinary/Interdisciplinary/Views/Home/Index.cshtml
+++ b/Interdisciplinary/Interdisciplinary/Views/Home/Index.cshtml
@@ -7,34 +7,40 @@
         <div class="info">
             <div>
                 <img src="~/images/shippingIcon.png" />
-                <h5>Free Shipping</h5>
-                <p>Lorem ipsum....</p>
+                <div>
+                    <h5>Free Shipping</h5>
+                    <p>Lorem ipsum....</p>
+                </div>
             </div>
             <div>
                 <img src="~/images/deliveryIcon.png" />
-                <h5>Fast delivery</h5>
-                <p>Lorem ipsum....</p>
+                <div>
+                    <h5>Fast delivery</h5>
+                    <p>Lorem ipsum....</p>
+                </div>
             </div>
             <div>
                 <img src="~/images/creditcardIcon.png" />
-                <h5>Secure payment</h5>
-                <p>Lorem ipsum....</p>
+                <div>
+                    <h5>Secure payment</h5>
+                    <p>Lorem ipsum....</p>
+                </div>
             </div>
         </div>
     </section>
 
     <section class="categories">
         <div class="vegetables">
-            <h4>Vegetable</h4>
-            <h2>Green Food</h2>
+            <h4>VEGETABLE</h4>
+            <h2>GREEN FOOD</h2>
             <p>Lorem Ipsum</p>
             <a href="#">Vegetables</a>
             <img src="~/images/salat.png" />
         </div>
 
         <div class="fruits">
-            <h4>Fruit</h4>
-            <h2>Healthy Food</h2>
+            <h4>FRUIT</h4>
+            <h2>HEALTHY FOOD</h2>
             <p>Lorem Ipsum</p>
             <a href="#">Fruits</a>
             <img src="~/images/jordbær.png" />
