--- a/Interdisciplinary/Interdisciplinary/wwwroot/css/imports/_variables.scss
+++ b/Interdisciplinary/Interdisciplinary/wwwroot/css/imports/_variables.scss
@@ -1,6 +1,5 @@
 //Colors
 $colorWhite: #F2F2F2;
-$colorGrey: #A6A09C;
 $colorBrown: #73685F;
 $colorDarkBrown: #59514A;
 $colorBlack: #262626;
@@ -8,6 +7,7 @@ $colorGreen: #7E9764;
 $colorGrey: #ededed;
 $colorLightGreen: #d6ebcb ;
 $colorYellow: #f5edaf;
+$colorRed: #d6918e;
 
 //Fonts
-$font-fam: 'Helvetica', sans-serif;
+$font-fam: 'proxima nova', sans-serif;
