--- a/Interdisciplinary/Interdisciplinary/wwwroot/css/styles.scss
+++ b/Interdisciplinary/Interdisciplinary/wwwroot/css/styles.scss
@@ -1,2 +1,296 @@
-@import './imports/_imports.scss';
+﻿@import 'imports/_imports.scss';
 
+body {
+    background-color: $colorGrey;
+    padding: 0;
+    max-width: 100%;
+    margin: 0;
+
+    * {
+        font-family: $font-fam;
+        margin: 0;
+        padding: 0;
+    }
+
+    a {
+        color: $colorWhite;
+    }
+}
+
+.page {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+
+    .header {
+        background: top no-repeat;
+        background-size: cover;
+        background-image: url('/images/headerImg.png');
+        height: calc(100vh - 195px);
+        width: 100%;
+        position: relative;
+        z-index: 4;
+        display: flex;
+        justify-content: center;
+
+        .info {
+            width: calc(100% - 320px);
+            height: 150px;
+            position: absolute;
+            bottom: 0;
+            transform: translateY(50%);
+            background-color: $colorWhite;
+            display: grid;
+            grid-template-columns: auto auto auto;
+            justify-items: center;
+            align-content: space-evenly;
+
+            & > div {
+                display: flex;
+
+                div {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    margin-left: 10px;
+                }
+
+                img {
+                    align-self: center;
+                }
+            }
+        }
+    }
+
+    .categories {
+        max-width: 1600px;
+        width: 100%;
+        display: grid;
+        grid-template-columns: auto auto;
+        grid-gap: 40px;
+        margin: 175px auto 100px;
+
+        div {
+            height: 360px;
+            position: relative;
+            padding: 60px 70px;
+            box-sizing: border-box;
+            z-index: 4;
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+            flex-direction: column;
+
+            h2 {
+                font-size: 70px;
+                font-weight: 900;
+                margin: 0;
+            }
+
+            h4 {
+                font-size: 28px;
+                font-weight: 700;
+                margin: 0;
+            }
+
+            img {
+                position: absolute;
+                bottom: 0;
+                right: 0;
+                z-index: -1;
+            }
+
+            p {
+                font-size: 24px;
+                margin-bottom: 34px;
+            }
+
+            a {
+                background-color: $colorWhite;
+                display: block;
+                padding: 16px 40px 16px 20px;
+                font-size: 16px;
+                border-radius: 25px;
+                text-decoration: none;
+                text-transform: uppercase;
+
+                &::after {
+                    content: '→';
+                    color: inherit;
+                    margin-left: 10px;
+                    display: inline;
+                    position: absolute;
+                }
+            }
+
+            &.vegetables {
+                background-color: $colorLightGreen;
+
+                h4 {
+                    color: $colorGreen;
+                }
+
+                a {
+                    color: $colorGreen;
+                }
+            }
+
+            &.fruits {
+                background-color: $colorYellow;
+
+                h4 {
+                    color: $colorRed;
+                }
+
+                a {
+                    color: $colorRed;
+                }
+            }
+        }
+    }
+
+    .bottom {
+        background: center no-repeat;
+        background-size: cover;
+        background-image: url('/images/bundFrugt.png');
+        height: 500px;
+        width: 100%;
+        position: relative;
+        z-index: 4;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        h2 {
+            color: $colorWhite;
+            font-size: 72px;
+            max-width: 800px;
+            text-align: center;
+        }
+
+        &::after {
+            content: '';
+            display: block;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba($colorGreen, .8);
+            z-index: -1;
+        }
+    }
+}
+
+.top-header {
+    height: 40vh;
+    width: 100%;
+    background: center no-repeat;
+    background-size: cover;
+    background-image: url('/images/top_header_underside.png');
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position:relative;
+    z-index: 4;
+    &::after {
+        content: '';
+        display: block;
+        position: absolute;
+        z-index: -1;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba($colorBlack, .4);
+    }
+    h1 {
+        font-size: 48px;
+        color: $colorWhite;
+        font-weight: bold;
+
+    }
+}
+.table-wrapper {
+    max-width: 1400px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 80px 0;
+    background-color: $colorWhite;
+    h1 {
+        width: 80%;
+        margin: 0 auto;
+        margin-bottom:10px;
+    }
+    & > p {
+        width: 80%;
+        margin: 0 auto;
+        text-align: right;
+        margin-top: 25px;
+    }
+    .create-button {
+        @include btn;
+    }
+    .table {
+        background-color: rgba($colorGrey, .8);
+        width:80%;
+        height: auto;
+        margin: 0 auto;
+        thead {
+            tr {
+                th {
+                    border:0;
+                    background-color: $colorYellow;
+
+                }
+            }
+        }
+        tbody {
+            tr {
+                td {
+                    padding: 8px 12px;
+                    box-sizing: border-box;
+                    text-align: center;
+                    a {
+                        color: $colorRed;
+                    }
+                }
+            }
+        }
+        
+    }
+}
+
+.form-wrapper {
+    width: 100%;
+    max-width: 1400px;
+    padding: 80px;
+    box-sizing: border-box;
+    margin: 0 auto;
+    .form {
+        margin-top: 30px;
+        form {
+            .form-group {
+                width: 400px;
+                padding: 8px 0;
+                position:relative;
+                display: flex;
+                justify-content: space-between;
+                margin: 0 auto;
+                input {
+                    padding: 8px;
+                    outline: 0;
+                    width: 60%;
+                    border: 1px solid $colorBlack;
+                }
+                .text-danger {
+                    display:none;
+                }
+                .btn {
+                    @include btn;
+                    width: 100%;
+                }
+            }
+        }
+    }
+}
