--- a/Interdisciplinary/Interdisciplinary/Views/Food/Create.cshtml
+++ b/Interdisciplinary/Interdisciplinary/Views/Food/Create.cshtml
@@ -23,9 +23,18 @@
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Picture" class="control-label"></label>
-                <input asp-for="Picture" class="form-control" />
                 <span asp-validation-for="Picture" class="text-danger"></span>
+
+            <div class="row">
+                <div class="col-md-5">
+                    <div class="form-group">
+                        <div class="col-md-10">
+                            <label asp-for="Picture" class="control-label"></label>
+                            <input class="form-control" asp-for="Picture" type="file" />
+                        </div>
+                    </div>
+                </div>
+            </div>
             </div>
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
