--- a/Interdisciplinary/Interdisciplinary/Views/Tag/Index.cshtml
+++ b/Interdisciplinary/Interdisciplinary/Views/Tag/Index.cshtml
@@ -4,38 +4,45 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<header class="top-header">
+    <h1>
+        TAGS
+    </h1>
+</header>
+<div class="table-wrapper">
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Name)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Color)
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Color)
+                    </td>
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.TagID">Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.TagID">Details</a> |
+                        <a asp-action="Delete" asp-route-id="@item.TagID">Delete</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Color)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Color)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.TagID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.TagID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.TagID">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+    <p>
+        <a asp-action="Create" class="create-button">Create New</a>
+    </p>
+</div>
