--- a/Interdisciplinary/Interdisciplinary/Views/Shared/_Layout.cshtml
+++ b/Interdisciplinary/Interdisciplinary/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Interdisciplinary</title>
     <link href="~/css/styles.css" rel="stylesheet" />
+    <script src="~/js/functions.js"></script>
 </head>
 <body>
     <header>
@@ -80,6 +81,7 @@
             <img src="images/boersen-gazelle-2017.png" alt="">
         </div>
     </footer>
+
     <script src="~/js/site.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
